# wee

./: .gitignore  .gitmodules  .p4ignore  CMakeLists.txt  LICENSE  README.md
doc/: changelog.txt  (+4 more)
games/ropey/: CMakeLists.txt
games/ropey/assets/: levels.json  screens.json  textures.json
games/ropey/assets/img/: Untitled.xcf
games/ropey/assets/levels/: beat_0.tmx  beat_1.tmx  beat_2.tmx  beat_3.tmx  beat_4.tmx  beat_5.tmx  example.tmx  example2.tmx  level.tmx  level1.tmx  level2.tmx  magicforest.tsx  s4m_ur4i-papercraft.tmx  template.tmx  ts.tsx  untitled.tmx  untitled.tx
games/ropey/classes/: Screens.hpp  SplashScreen.cpp  common.hpp  components.cpp  components.hpp  entities.cpp  entities.hpp  factories.cpp  factories.hpp  game.cpp  game.hpp  gameplay_screen.cpp  gameplay_screen.hpp  gamescreen_factory.cpp  input.hpp  level.cpp  level.hpp  main.cpp  main_menu_screen.cpp  screens.hpp  splash_screen.cpp  systems.cpp  systems.hpp  tmx.cpp  tmx.hpp
src/: CMakeLists.txt
src/base/: CMakeLists.txt  SDL_Application.c  SDL_ColorEXT.cpp  application.cpp  base_application.cpp
src/base/platform/SDL2/: CMakeLists.txt  SDL_Application.cpp  SDL_EventLoop.cpp
src/core/: CMakeLists.txt  intersect.cpp  logstream.cpp  mat4.cpp  quaternion.cpp  random.cpp  rect.cpp  vec3.cpp
src/engine/: CMakeLists.txt  ads.cpp  application.cpp  assets.cpp  b2Adapters.cpp  b2ContactListenerImpl.cpp  b2DebugDrawImpl.cpp  camera.cpp  easing.cpp  gamescreen.cpp  line_renderer.cpp  menuscreen.cpp  model_content_reader.cpp  model_content_writer.cpp  model_importer.cpp  model_writer.cpp  sprite_font.cpp  sprite_sheet.cpp  spritesheet.cpp  viewport.cpp
src/gfx/: SDL_ColorEXT.cpp  SDL_RendererEXT.cpp  graphics_device.cpp  mesh_generator.cpp  model.cpp  shader.cpp  viewport.cpp
src/hokusai/: constraints.cpp
src/main/cpp/hokusai/: CMakeLists.txt
src/main/cpp/wee/base/: application.cpp
src/main/cpp/wee/core/: aabb.cpp  logstream.cpp  mat4.c  plane.cpp
src/main/cpp/wee/engine/: achievement.cpp  assets.cpp  b2ContactListenerImpl.cpp  b2RayCastClosest.cpp  camera.cpp  easing.cpp
src/main/cpp/wee/gfx/: CMakeLists.txt  graphics_device.cpp  model.cpp  shader.cpp
src/main/cpp/wee/util/: CMakeLists.txt
src/test/cpp/: CMakeLists.txt  test_jmp.cpp  volatility.cpp  wfc.cpp
src/test/cpp/common/assets/: test_02.vox  test_03.vox  test_05.vox  test_10.vox
src/test/cpp/common/assets/shaders/: converted.lst  default_p3n3t2.glsl
src/test/dotnet/: specflow.json
src/test/dotnet/feature/: ExampleFeature.feature.cs
src/util/: CMakeLists.txt  logstream.cpp
src/wee/: CMakeLists.txt
src/wee/base/: CMakeLists.txt  SDL_Application.c  application.cpp
src/wee/base/platform/SDL2/: SDL_EventLoop.cpp
src/wee/base/platform/sdl/: CMakeLists.txt  SDL_Application.c
src/wee/core/: CMakeLists.txt  aabb.cpp  frustum.cpp  intersect.cpp  mat4.cpp  quaternion.cpp  random.cpp
src/wee/engine/: CMakeLists.txt  ads.cpp  assets.cpp  assets.mm  b2Adapters.cpp  b2ContactListenerImpl.cpp  b2DebugDrawImpl.cpp  b2RayCastClosest.cpp  ecs.cpp  model_importer.cpp  packer.cpp  sprite_font.cpp  sprite_sheet.cpp  vox.cpp
src/wee/gfx/: CMakeLists.txt  SDL_ColorEXT.cpp  SDL_SurfaceEXT.cpp  animation_controller.cpp  graphics_device.cpp  mesh_generator.cpp  model.cpp  shader.cpp  vertex_declaration.cpp
src/wee/util/: convert.cpp
tests/: Box2DEXT.hpp  CMakeLists.txt  \  astar.hpp  attempt2.hpp  attempt3.hpp  carpenter.cpp  cat.hpp  dijkstra.cpp  ecs.cpp  input019-1.txt  meshify.hpp  nami.hpp  ndview.hpp  people.cpp  picoro.h  stocks.cpp  tensor.hpp  terrain.hpp  test_animations.cpp  test_application.cpp  test_const_iterator.cpp  test_coroutine.cpp  test_datetime.cpp  test_filesystem.cpp  test_greenthreads.cpp  test_gui.cpp  test_kult.cpp  test_logstream.cpp  test_model.cpp  test_parallel_for.cpp  test_particles.cpp  test_rendertargets.cpp  test_rope.cpp  test_shaders.cpp  test_sprite_font.cpp  test_spritesheet.cpp  test_ttf.cpp  test_wfc.cpp  test_wfc_attempt1.cpp  (+9 more)
tests/assets/: fonts.json  hero.tps  pickups.tps  skeleton.tps  test_spritesheet.json  texture.json
tests/assets/img/: hero.json  pickups.json  skeleton.json
tests/assets/levels/: foo01  level.json  level.tmx  level2.tmx  level3.tmx
tests/common/: Box2DEXT.hpp  b2Helper.hpp  camera.hpp  collisions.cpp  collisions.hpp  common.hpp  components.cpp  components.hpp  terrain.hpp
tests/common/assets/: 8x8x8.vox  adjacencies.json  examples.json  exported.vox  models.json  shaders.json  test_01.vox  test_04.vox  test_06.vox  test_07.vox  test_09.vox  test_10.vox  unique.vox
tests/common/assets/examples/: example_09.json  skyscraper.json
tests/common/assets/levels/: example.tmx  tilesheet_complete.tsx
tests/common/assets/models/: monster-animated-character.b3d  monster.ms3d
tests/common/assets/models/modular_buildings/: License.txt
tests/common/assets/models/modular_buildings/Models/: modularBuildings_001.fbx  modularBuildings_001.xxx  modularBuildings_002.fbx  modularBuildings_002.xxx  modularBuildings_004.fbx  modularBuildings_004.xxx  modularBuildings_005.fbx  modularBuildings_005.xxx  modularBuildings_006.xxx  modularBuildings_007.fbx  modularBuildings_007.xxx  modularBuildings_008.fbx  modularBuildings_009.fbx  modularBuildings_009.xxx  modularBuildings_010.fbx  modularBuildings_010.xxx  modularBuildings_011.fbx  modularBuildings_011.xxx  modularBuildings_012.fbx  modularBuildings_013.fbx  modularBuildings_013.xxx  modularBuildings_014.fbx  modularBuildings_014.xxx  modularBuildings_015.fbx  (+127 more)
tests/common/assets/models/monster_anim_ogre/: monster-anim.material  monster-anim.mesh  monster-anim.skeleton
tests/common/assets/scripts/: cg2glsl.py
tests/common/assets/shaders/: default.cg  default.glsl  default_notex.glsl  default_p3c0.glsl  passthrough.glsl  skinning.glsl  test.glsl
tests/dotnet/: dotnet.csproj
tests/dotnet/feature/: ExampleFeature.feature
tests/hokusai/: adjacency_list.hpp  basic_constraint.hpp  hokusai.hpp  tileset.hpp  topology.hpp
tests/wee/base/: test_application.cpp
tests/wee/core/: test_map.cpp  test_shared_library.cpp
(+545 files in other folders)
