INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/include/wee
    ${CMAKE_SOURCE_DIR}/vendor/cxx-prettyprint
    ${CMAKE_SOURCE_DIR}/vendor/SDL2_image
    ${CMAKE_SOURCE_DIR}/vendor/SDL2_mixer
    ${CMAKE_SOURCE_DIR}/vendor/date/include
    ${CMAKE_SOURCE_DIR}/vendor/enet/include
    ${CMAKE_SOURCE_DIR}/vendor/fmt/include
    ${CMAKE_SOURCE_DIR}/vendor/json
    ${CMAKE_SOURCE_DIR}/vendor/liquidfun/liquidfun/Box2D/Box2D
    ${CMAKE_SOURCE_DIR}/vendor/json/include
    ${CMAKE_SOURCE_DIR}/vendor/poco
    ${CMAKE_SOURCE_DIR}/vendor/SDL2/include
)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(gfx)
ADD_SUBDIRECTORY(engine)
