PROJECT(ropey)

#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/${PROJECT_NAME} )

INCLUDE_DIRECTORIES(
    ${INCLUDE_DIRECTORIES}
    ${CMAKE_CURRENT_SOURCE_DIR}/classes
)

FILE(GLOB SRC
    ${CMAKE_CURRENT_SOURCE_DIR}/classes/*.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})
