

PROJECT(wee_base)


FILE(GLOB SOURCES
    "*.cpp"
    "*.c"
)

ADD_LIBRARY(
    ${PROJECT_NAME}
    ${LIBRARY_TYPE}
    ${SOURCES}
)

TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    wee_util
)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)


ADD_SUBDIRECTORY(platform/SDL2)

IF(WEE_PLATFORM_X11)
    ADD_SUBDIRECTORY(platform/x11)
ELSEIF(WEE_PLATFORM_IOS)
    ADD_SUBDIRECTORY(platform/ios)
ELSEIF(WEE_PLATFORM_ANDROID)
    ADD_SUBDIRECTORY(platform/android)
ENDIF()

