PROJECT(wee_base C CXX)
FILE(GLOB SOURCES
    "*.cpp"
    "*.c"
)
ADD_LIBRARY(
    ${PROJECT_NAME}
    ${SOURCES}
)
IF(WIN32)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
        WINDOWS_EXPORT_ALL_SYMBOLS TRUE
    )
ENDIF()
TARGET_LINK_LIBRARIES(${PROJECT_NAME} wee_base_sdl) # SDL2 SDL2_ttf SDL2_image wee_gfx)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/platform/sdl")
