PROJECT(wee_core)
FILE(GLOB SOURCES
    "*.cpp"
    "*.c"
)
ADD_LIBRARY(
    ${PROJECT_NAME}
    ${SOURCES}
)
IF(WIN32)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
        WINDOWS_EXPORT_ALL_SYMBOLS TRUE
    )
ENDIF()
TARGET_LINK_LIBRARIES(${PROJECT_NAME})
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)