PROJECT(wee_engine)
FILE(GLOB SOURCES
    "*.cpp"
    "*.c"
)
ADD_LIBRARY(
    ${PROJECT_NAME}
    ${SOURCES}
)
IF(WIN32)
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES
        WINDOWS_EXPORT_ALL_SYMBOLS TRUE
    )
ENDIF()
TARGET_LINK_LIBRARIES(${PROJECT_NAME} wee_base wee_gfx wee_core liquidfun assimp)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)
