PROJECT(wee_gfx)

FILE(GLOB SOURCES
    "*.cpp"
    "*.c"
)

ADD_LIBRARY(
    ${PROJECT_NAME}
    ${LIBRARY_TYPE}
    ${SOURCES}
)

find_package(OpenGL REQUIRED)
MESSAGE(STATUS "OpenGL found at ${OPENGL_LIBRARIES}")
set(LIBDEPS glew ${OPENGL_LIBRARIES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBDEPS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)
