PROJECT(wee_gfx)

FILE(GLOB SOURCES
    "*.cpp"
    "*.c"
)

ADD_LIBRARY(
    ${PROJECT_NAME}
    ${LIBRARY_TYPE}
    ${SOURCES}
)

if(WIN32)
	find_package(OpenGL REQUIRED)
	MESSAGE(STATUS "Linking ${OPENGL_LIBRARIES}")
	set(LIBDEPS SDL2 wee_core ${OPENGL_LIBRARIES})
endif()

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${LIBDEPS})


INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)
