PROJECT(wee_base_SDL2)


INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/vendor/SDL2/include
)

FILE(GLOB SOURCES
    "*.cpp"
    "*.c"
)

LINK_DIRECTORIES(
    ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
)

ADD_LIBRARY(
    ${PROJECT_NAME}
    ${LIBRARY_TYPE}
    ${SOURCES}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    SDL2
    wee_base
)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION .)
